[package]
publish = false
name = "sdr-fm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
cpal = "0.15.3"
k9api-dsp = { version = "0.1.0", path = "../../dsp" }
num-complex = "0.4.5"
soapysdr = "0.4.0"
